welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if((13<=a) && (a<=19) || (13<=b) && (b<=19)) {
         ^